--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 <body>
     
     <div id="main-content">
-        <!-- Navbar HTML -->
         <header>
           <div class="navbar">
             <div class="menu-icon" onclick="toggleMenu(); rotateIcon();">
@@ -53,203 +52,46 @@
           </div>
         </header>
     </div>
-    <!-- <div class="topBar">
-        <div class="cart" id="cart">
-            <i class="bi bi-cart"></i>
-            <div class="num" id="num">0</div>
-            <div class="purchases" id="purchases">
-                <div class="allPurchasedItems" id="allPurchasedItems"></div>
-                <a href="checkout.html" onclick="store()" class="checkout">CheckOut</a>
-            </div>
-        </div>
-        <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="dropDown">
-              Choose a Genre
-            </button>
-            <ul class="dropdown-menu">
-                <li><button class="genre dropdown-item" data-type="allBooks">All Books</button></li>
-                <li><button class="genre dropdown-item" data-type="fantasy">Fantasy</button></li>
-                <li><button class="genre dropdown-item" data-type="romance">Romance</button></li>
-                <li><button class="genre dropdown-item" data-type="action">action</button></li>
-                <li><button class="genre dropdown-item" data-type="classics">Classics</button></li>
-                <li><button class="genre dropdown-item" data-type="horror">Horror</button></li>
-                <li><button class="genre dropdown-item" data-type="young adult">Young adult</button></li>
-            </ul>
-        </div>
 
-    </div> -->
-    
-    <!-- <div class="container">
-        <form id="book-search-form" class="book-search-form" >
-            <div class="formElements">
-                <input type="text" id="book-search-input" placeholder="Enter a book name..." required>
-                <button type="submit" class="searchButton"><i class="bi bi-search"></i></button>
-            </div>
-        </form>
-        <div class="loader" id="loader"></div>
-        <div id="book-cover-container">
-                <div class="book haveHover" data-genre="fantasy, action, comedy, young adult">
-                    <img class="bookImg" src="images/Harry Potter.png" alt="Cover of Harry Potter">
-                    <div class="bookDescription">
-                        <div>
-                            <p class="bookTitle">Harry Potter and the Philosopher's Stone</p>
-                            <p class="authorName">by J. K. Rowling</p>
-                        </div>
-                        <div class = "actions">
-                            <table>
-                                <tr>
-                                    <td class="showDescription"><p>Description</p></td>
-                                    <td  class="buy haveHover" id="HarryPotter">
-                                        <p>
-                                            <i class="bi bi-cart-plus"></i>
-                                            <span class='price'>$80</span>
-                                        </p>
-                                    </td>
-                                </tr>
-                            </table>
-                        </div>
-                    </div>
-                    <div id="popoverr">
-                        <div class="descriptionBox">
-                            <button class="hideDescription">x</button>
-                            <div class="descriptionBookDetails">
-                                <img class="descriptionImage" src="images/Harry Potter.png" alt="Cover of ${title}">
-                                <div>
-                                    <h3>Harry Potter and the Philosopher's Stone</h3>
-                                    <p>by J. K. Rowling</p>
-                                    <p class="descText" >Harry Potter has no idea how famous he is. That's because he's being raised by his miserable aunt and uncle who are terrified Harry will learn that he's really a wizard, just as his parents were. But everything changes when Harry is summoned to attend an infamous school for wizards, and he begins to discover some clues about his illustrious birthright...</p>
-                                    <a href="https://openlibrary.org/books/OL40235949M/Harry_Potter_and_the_Philosopher's_Stone" target="_blank">
-                                        <button type="button" class="moreDetails btn-secondary">See more Details</button>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="book haveHover" data-genre="classics,">
-                    <img class="bookImg" src="images/Brother.png" alt="Cover of Brothers karamazov">
-                    <div class="bookDescription">
-                        <div>
-                            <p class="bookTitle">The Brothers Karamazov</p>
-                            <p class="authorName">by Fyodor Dostoevsky</p>
-                        </div>
-                    </div>
-                        <div class = "actions">
-                            <table>
-                                <tr>
-                                    <td class="showDescription"><p>Description</p></td>
-                                    <td  class="buy haveHover" id="The_Brothers_Karamazov">
-                                        <p>
-                                            <i class="bi bi-cart-plus"></i>
-                                            <span class='price'>$150</span>
-                                        </p>
-                                    </td>
-                                </tr>
-                            </table>
-                        </div>
-                    <div id="popoverr">
-                        <div class="descriptionBox">
-                            <button class="hideDescription">x</button>
-                            <div class="descriptionBookDetails">
-                                <img class="descriptionImage" src="images/Brother.png" alt="Cover of ${title}">
-                                <div>
-                                    <h3>The Brothers Karamazov</h3>
-                                    <p>by Fyodor Dostoevsky</p>
-                                    <p class="descText" >The Brothers Karamazov is a murder mystery, a courtroom drama, and an exploration of erotic rivalry in a series of triangular love affairs involving the “wicked and sentimental” Fyodor Pavlovich Karamazov and his three sons―the impulsive and sensual Dmitri; the coldly rational Ivan; and the healthy, red-cheeked young novice Alyosha. Through the gripping events of their story...</p>
-                                    <a href="https://openlibrary.org/books/OL28031201M/The_Brothers_Karamazov" target="_blank">
-                                        <button type="button" class="moreDetails btn-secondary" class="moreDetails">See more Details</button>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="book haveHover" data-genre="fantasy, action, classics">
-                    <img class="bookImg" src="images/lordRings.png" alt="Cover of The lord of the Rings">
-                    <div class="bookDescription">
-                        <div>
-                            <p class="bookTitle">The Lord of the Rings</p>
-                            <p class="authorName">by J.R.R. Tolkien</p>
-                        </div>
-                        <div class = "actions">
-                            <table>
-                                <tr>
-                                    <td class="showDescription"><p>Description</p></td>
-                                    <td  class="buy haveHover" id="The_Lord_of_the_Rings">
-                                        <p>
-                                            <i class="bi bi-cart-plus"></i>
-                                            <span class='price'>$45</span>
-                                        </p>
-                                    </td>
-                                </tr>
-                            </table>
-                        </div>
-                    </div>
-                    <div id="popoverr">
-                        <div class="descriptionBox">
-                            <button class="hideDescription">x</button>
-                            <div class="descriptionBookDetails">
-                                <img class="descriptionImage" src="images/lordRings.png" alt="Cover of ${title}">
-                                <div>
-                                    <h3>The Lord of the Rings</h3>
-                                    <p>by J.R.R. Tolkien</p>
-                                    <p class="descText" >One Ring to rule them all, One Ring to find them, One Ring to bring them all and in the darkness bind them
-                                    In ancient times the Rings of Power were crafted by the Elven-smiths, and Sauron, the Dark Lord, forged the One Ring, filling it with his own power so that he could rule all others. But the One Ring was taken from him, and though he sought it throughout Middle-earth, it remained lost to him..</p>
-                                    <a href="https://openlibrary.org/books/OL51711484M/The_Lord_of_the_Rings" target="_blank">
-                                        <button type="button" class="moreDetails btn-secondary" class="moreDetails">See more Details</button>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="book haveHover" data-genre="fantasy, action, classic, romance">
-                    <img class="bookImg" src="images/Dune.png" alt="Cover of Harry Potter">
-                    <div class="bookDescription">
-                        <div>
-                            <p class="bookTitle">Dune</p>
-                            <p class="authorName">by Frank Herbert</p>
-                        </div>
-                        <div class = "actions">
-                            <table>
-                                <tr>
-                                    <td class="showDescription"><p>Description</p></td>
-                                    <td  class="buy haveHover" id="Dune">
-                                        <p>
-                                            <i class="bi bi-cart-plus"></i>
-                                            <span class='price'>$170</span>
-                                        </p>
-                                    </td>
-                                </tr>
-                            </table>
-                        </div>
-                    </div>
-                    <div id="popoverr">
-                        <div class="descriptionBox">
-                            <button class="hideDescription">x</button>
-                            <div class="descriptionBookDetails">
-                                <img class="descriptionImage" src="images/Dune.png" alt="Cover of ${title}">
-                                <div>
-                                    <h3>Dune</h3>
-                                    <p>by Frank Herbert</p>
-                                    <p class="descText" >Set on the desert planet Arrakis, Dune is the story of the boy Paul Atreides, heir to a noble family tasked with ruling an inhospitable world where the only thing of value is the “spice” melange, a drug capable of extending life and enhancing consciousness. Coveted across the known universe, melange is a prize worth killing for...</p>
-                                    <a href="https://openlibrary.org/works/OL893415W/Dune" target="_blank">
-                                        <button type="button" class="moreDetails btn-secondary" class="moreDetails">See more Details</button>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-        </div>
-    </div> -->
     <div class="line">
-        <i class="bi bi-house-door-fill"></i>
-        <svg xmlns="http://www.w3.org/2000/svg" class="flex-shrink-0 w-6 h-full text-gray-200" viewBox="-23 0 23 44" fill="currentColor" preserveAspectRatio="none" aria-hidden="true">
+        <i class="bi bi-house-door-fill mobileHide"></i>
+        <svg xmlns="http://www.w3.org/2000/svg" class="flex-shrink-0 w-6 h-full text-gray-200 mobileHide" viewBox="-23 0 23 44" fill="currentColor" preserveAspectRatio="none" aria-hidden="true">
             <path d="M -1 0 l -22 22 l 22 22 h 1 l -22 -22 l 22 -22 H -1 z"></path>
         </svg>
+        <!-- <i class="fa-solid fa-angle-right --fa-font-light"></i> -->
         <p>English Books</p>
+        <nav class="navbar">
+            <div class="container-fluid" style="padding-right: 0 !important;">
+              <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+                <span><i class="fa-solid fa-filter"></i> Filter</span>
+              </button>
+              <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                <div class="offcanvas-header">
+                  <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Search</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                  <ul class="genreContainer">
+                    <li><button class="genre" data-type="allBooks">All Books</button></li>
+                    <li><button class="genre" data-type="fantasy">Fantasy</button></li>
+                    <li><button class="genre" data-type="romance">Romance</button></li>
+                    <li><button class="genre" data-type="action">action</button></li>
+                    <li><button class="genre" data-type="classics">Classics</button></li>
+                    <li><button class="genre" data-type="horror">Horror</button></li>
+                    <li><button class="genre" data-type="young adult">Young adult</button></li>
+                    <li><button class="genre" data-type="science fiction">science fiction</button></li>
+                </ul>
+                </div>
+              </div>
+            </div>
+          </nav>
     </div>
+    <form id="book-search-form-2" class="book-search-form" >
+        <div class="formElements">
+            <input type="text" id="book-search-input-2" placeholder="Enter a book name..." required>
+            <button type="submit" class="searchButton"><i class="bi bi-search"></i></button>
+        </div>
+      </form>
     <div class="bodyContainer">
         <div class="filter-section">
             <div class="filter-group">
@@ -306,22 +148,22 @@
                             </div>
                         </div>
                         <div class="popoverr">
-                        <div class="descriptionBox">
-                            <button class="hideDescription">x</button>
-                            <div class="descriptionBookDetails">
-                                <img class="descriptionImage" src="images/Dune.png" alt="Cover of ${title}">
-                                <div>
-                                        <div>
-                                            <h3>Dune</h3>
-                                            <p class="descName">by Frank Herbert</p>
-                                        </div>
-                                    <p class="descText">Set on the desert planet Arrakis, Dune is the story of the boy Paul Atreides, heir to a noble family tasked with ruling an inhospitable world where the only thing of value is the “spice” melange, a drug capable of extending life and enhancing consciousness. Coveted across the known universe, melange is a prize worth killing for...</p>
-                                    <a href="https://openlibrary.org/works/OL893415W/Dune" target="_blank">
-                                        <button type="button" class="moreDetails btn-secondary" class="moreDetails">See more Details</button>
-                                    </a>
+                            <div class="descriptionBox">
+                                <button class="hideDescription">x</button>
+                                <div class="descriptionBookDetails">
+                                    <img class="descriptionImage" src="images/Dune.png" alt="Cover of ${title}">
+                                    <div>
+                                            <div>
+                                                <h3>Dune</h3>
+                                                <p class="descName">by Frank Herbert</p>
+                                            </div>
+                                        <p class="descText">Set on the desert planet Arrakis, Dune is the story of the boy Paul Atreides, heir to a noble family tasked with ruling an inhospitable world where the only thing of value is the “spice” melange, a drug capable of extending life and enhancing consciousness. Coveted across the known universe, melange is a prize worth killing for...</p>
+                                        <a href="https://openlibrary.org/works/OL893415W/Dune" target="_blank">
+                                            <button type="button" class="moreDetails btn-secondary" class="moreDetails">See more Details</button>
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
                         </div>
                   </div>
                   <div class="card haveHover" data-genre="classics,">
@@ -501,7 +343,7 @@
         </div>
     </div>
 
-    <script type="module" src="Js/firstDraft.js"></script>
+    <script src="Js/firstDraft.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="myJS/gsap.min.js"></script>
     <script src="myJS/script.js"></script>
